deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
        - name: drupal
          image: bitnami/drupal:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: drupal-files
              mountPath: /var/www/html/modules
              subPath: modules
            - name: drupal-files
              mountPath: /var/www/html/profiles
              subPath: profiles
            - name: drupal-files
              mountPath: /var/www/html/sites
              subPath: sites
            - name: drupal-files
              mountPath: /var/www/html/themes
              subPath: themes
            - name: drupal-files
              mountPath: /var/www/html/sites/default/files/config
              subPath: config
      volumes:
        - name: drupal-files
          persistentVolumeClaim:
            claimName: drupal-pvc
